compiler/testData/diagnostics/tests/resolve/invoke/errors/unresolvedInvoke.fir.kt
// !DIAGNOSTICS: -UNUSED_EXPRESSION
fun foo(i: Int) {
    <!UNRESOLVED_REFERENCE!>i<!>()
    <!UNRESOLVED_REFERENCE!>1()<!>
}